# DitTradeComplianceAI

./: .dockerignore  .gitignore  Dockerfile  Procfile  README.md  docker-compose.yml  frontend_api_contract.md  pyproject.toml  render.yaml  requirements.txt
backend/api/: main.py  v1_app.py
backend/config/: constants.py  settings.py
backend/ingestion/: upload_service.py
backend/orchestration/: pipeline_manager.py  task_queue.py  workflow_engine.py
backend/rules/: operational_rules.py
backend/services/: export_service.py  operator_report_service.py  result_service.py  scoring_input_normalize.py
configs/: anomaly_config.yaml  model_config.yaml  product_config.yaml  rules_config.yaml
frontend/: app.py
frontend-web/: .env.example  README.md  next.config.ts  package-lock.json  package.json
frontend/components/: charts.py  risk_tables.py  sidebar.py  summary_cards.py  upload_widget.py
frontend/state/: session_manager.py
scripts/: bootstrap.sh  generate_sample_data.py  run_api.py  train_models.py
src/data/: data_quality.py  generator.py  icc_transformer.py  io.py  mapping.py  schema_intelligence.py  type_inference.py  unit_normalisation.py  validation.py
src/domain/: schema.py
src/evaluation/: metrics.py
src/explainability/: explanations.py
src/features/: preprocessing.py
src/intelligence/: batch_analysis.py  fraud_patterns.py
src/ml/: inference.py  training.py
src/rules/: jurisdiction_engine.py  policy_registry.py  rule_engine.py
src/utils/: config.py
storage/: synthetic_trade_records.csv
tests/: test_rules.py
(+118 files in other folders)
